--- a/templates/form.html
+++ b/templates/form.html
@@ -14,7 +14,7 @@
         <label for="password">Mot de passe :</label>
         <input type="password" id="password" name="password" required>
         <div class="en-tete">
-            <a href="/sucess">→ Me connecter ←</a>
+            <a href="success">→ Me connecter ←</a>
         </div>
       </form>
 </body>
