--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,9 @@
 <body>
 	<h1>Bienvenue!</h1>
 	<div class="container">
-        <a href=".contacts.html"><button>Voir les contacts</button></a>
-		<a href=".inscriptioncontacts.html"><button>Inscrire un nouveau contact</button></a>
-        <a href=".inscriptionboites.html"><button>Inscrire une nouvelle entreprise</button></a>
+        <a href="/contacts"><button>Voir les contacts</button></a>
+		<a href="/inscriptioncontacts"><button>Inscrire un nouveau contact</button></a>
+        <a href="/inscriptionboites"><button>Inscrire une nouvelle entreprise</button></a>
 	</div>
 </body>
 </html>
