--- a/templates/success.html
+++ b/templates/success.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Inscription réussie</h1>
-    <p>Merci de vous être enregistré !</p>
+    <p>Merci, {{nomUtilisateur}}, de vous être enregistré !</p>
     <a href="/home">→ Accueil ←</a>
 </body>
 </html>
