--- a/templates/form.html
+++ b/templates/form.html
@@ -7,15 +7,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Formulaire d'inscription :</h1>
-    <form action="#" method="post">
-        <label for="username">Nom d'utilisateur :</label>
-        <input type="texte" id="username" name="username" required>
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="password" required>
-        <div class="en-tete">
-            <a href="success">→ Me connecter ←</a>
-        </div>
-      </form>
+    <h1>Bienvenue!</h1>
+	<div class="container">
+        <a href=".contacts.html"><button>Voir les contacts</button></a>
+		<a href=".inscriptioncontacts.html"><button>Inscrire un nouveau contact</button></a>
+        <a href=".inscriptionboites.html"><button>Inscrire une nouvelle entreprise</button></a>
+	</div>
 </body>
 </html>
