modification du html

--- a/templates/form.html
+++ b/templates/form.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <title>Formulaire d'inscription</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Formulaire d'inscription :</h1>
-    <form action="#" method="post">
-        <label for="username">Nom d'utilisateur :</label>
-        <input type="texte" id="username" name="username" required>
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="password" required>
-        <div class="en-tete">
-            <a href="success">→ Me connecter ←</a>
-        </div>
-      </form>
+    <form action="{{ url_for('register') }}" method="post">
+        <label for="nomUtilisateur">Nom d'utilisateur :</label>
+        <input type="text" id="nomUtilisateur" name="nomUtilisateur" required>
+        <label for="mdp">Mot de passe :</label>
+        <input type="password" id="mdp" name="mdp" required>
+        <button type="submit">S'inscrire</button>
+    </form>
 </body>
 </html>
