--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 	<h1>Bienvenue!</h1>
@@ -12,5 +15,9 @@
 		<a href="/inscriptioncontacts"><button>Inscrire un nouveau contact</button></a>
         <a href="/inscriptionboites"><button>Inscrire une nouvelle entreprise</button></a>
 	</div>
+    <div class="ocean">
+        <div class="wave"></div>
+        <div class="wave"></div>
+      </div>
 </body>
 </html>
