--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Merci de vous inscrire :</h1>
         <div class="en-tete">
-            <a href="/form">→ Me connecter ←</a>
+            <a href="/form">→ S'inscrire ←</a>
         </div>
       </form>
 </body>
