--- a/static/style.css
+++ b/static/style.css
@@ -7,9 +7,11 @@ body{
     align-items: center;
     margin-top: 50px;
     font-size: 2rem;
+    font-family: 'Josefin Sans', sans-serif;
 }
 h1 {
     text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 2em;
     margin-top: 30px;
 }
@@ -23,10 +25,10 @@ button {
     padding: 10px;
     margin: 10px;
     font-size: 1.2em;
+    font-family: 'Josefin Sans', sans-serif;
     border-radius: 5px;
-    border: none;
+    border-color: #015871;
     cursor: pointer;
-    background-color: #ffc573;
     color: white;
 }
 
@@ -47,8 +49,64 @@ form {
     padding: 10px;
     margin-bottom: 20px;
     border-radius: 5px;
-    border: 1px solid #ffd9a0;
+    border: 1px solid #015871;
     font-size: 1.1rem;
+    font-family: 'Josefin Sans', sans-serif;
     width: 300px;
     max-width: 100%;
   }
+
+body {
+  height: 100%;
+}
+
+body {
+  background: radial-gradient(ellipse at center, #fffeea 0%, #fffeea 35%, #b7e8eb 100%);
+  overflow: hidden;
+}
+
+.ocean {
+  height: 5%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #015871;
+}
+
+.wave {
+  background: url(https://cdn.kcak11.com/codepen_assets/wave_animation/wave.svg) repeat-x;
+  position: absolute;
+  top: -198px;
+  width: 6400px;
+  height: 198px;
+  animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
+  transform: translate3d(0, 0, 0);
+}
+
+.wave:nth-of-type(2) {
+  top: -175px;
+  animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite, swell 7s ease -1.25s infinite;
+  opacity: 1;
+}
+
+@keyframes wave {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: -1600px;
+  }
+}
+@keyframes swell {
+  0%,
+  100% {
+    transform: translate3d(0, -25px, 0);
+  }
+  50% {
+    transform: translate3d(0, 5px, 0);
+  }
+}
+.endWave{
+  display:none;
+}
