modification de la page home

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <h1>Merci de vous inscrire :</h1>
-        <div class="en-tete">
-            <a href="/form">→ S'inscrire ←</a>
+        <div class="container">
+            <a href="/form" style="width: 25%;"><button>→ S'inscrire ←</button></a>
         </div>
       </form>
 </body>
