--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,8 @@ body{
 h1 {
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 2em;
+    font-size: 4em;
+    color: #015871;
     margin-top: 30px;
 }
 .container {
@@ -22,14 +23,18 @@ h1 {
     margin-top: 50px;
 }
 button {
+    width: 100%;
     padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin: 10px;
     font-size: 1.2em;
     font-family: 'Josefin Sans', sans-serif;
     border-radius: 5px;
-    border-color: #015871;
+    border-color: #0788ac;
+    border-width: 0.2em;
     cursor: pointer;
-    color: white;
+    color: #015871;
 }
 
 form {
@@ -43,8 +48,18 @@ form {
     font-size: 1.2rem;
     margin-bottom: 10px;
   }
+  
+  input[type="texte"]{
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: 1px solid #015871;
+    font-size: 1.1rem;
+    font-family: 'Josefin Sans', sans-serif;
+    width: 300px;
+    max-width: 100%;
+  }
 
-  input[type="texte"],
   input[type="password"] {
     padding: 10px;
     margin-bottom: 20px;
