--- a/templates/form.html
+++ b/templates/form.html
@@ -16,7 +16,7 @@
         <input type="text" id="nomUtilisateur" name="nomUtilisateur" required>
         <label for="mdp">Mot de passe :</label>
         <input type="password" id="mdp" name="mdp" required>
-        <button type="submit">S'inscrire</button>
+        <button type="submit" style="width: 25%;">S'inscrire</button>
     </form>
 </body>
 </html>
