--- a/templates/home.html
+++ b/templates/home.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-	<h1>Bienvenue!</h1>
+	<h1>Bienvenue à vous !</h1>
 	<div class="container">
-        <a href="/contacts"><button>Voir les contacts</button></a>
-		<a href="/inscriptioncontacts"><button>Inscrire un nouveau contact</button></a>
-        <a href="/inscriptionboites"><button>Inscrire une nouvelle entreprise</button></a>
+        <a href="/contacts" style="width: 25%;"><button>Voir les contacts</button></a>
+		<a href="/inscriptioncontacts" style="width: 25%;"><button>Inscrire un nouveau contact</button></a>
+        <a href="/inscriptionboites" style="width: 25%;"><button>Inscrire une nouvelle entreprise</button></a>
 	</div>
     <div class="ocean">
         <div class="wave"></div>
