--- a/templates/success.html
+++ b/templates/success.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <h1>Inscription réussie</h1>
-    <p>Merci, {{nomUtilisateur}}, de vous être enregistré !</p>
-    <a href="/home">→ Accueil ←</a>
+    <p class="inscription_text">Merci de vous être enregistré !</p>
+    <div class="container">
+        <a href="/home" style="width: 25%;"><button>→ Accueil ←</button></a>    
+	</div>
+    <div class="ocean" style="opacity: calc(50%);">
+        <div class="wave"></div>
+        <div class="wave"></div>
+      </div>
 </body>
 </html>
