--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{%block title%}
+    Home
+{%endblock%}
+
+{%block body%}
 	<h1>Bienvenue à vous !</h1>
 	<div class="container">
         <a href="/contacts" style="width: 25%;"><button>Voir les contacts</button></a>
@@ -19,5 +15,4 @@
         <div class="wave"></div>
         <div class="wave"></div>
       </div>
-</body>
-</html>
+      {%endblock%}
