--- a/templates/form.html
+++ b/templates/form.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<title>Formulaire d'inscription</title>
-<head>
-    <meta charset="UTF-8">
-    <title>Formulaire d'inscription</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{%block title%}
+    Formulaire d'inscription
+{%endblock%}
+
+{%block body%}
     <h1>Formulaire d'inscription :</h1>
-    <div class="loader">
-        <div class="circleloader"></div>
-      </div>
     <form action="{{ url_for('register') }}" method="post">
         <label for="nomUtilisateur">Nom d'utilisateur :</label>
         <input type="text" id="nomUtilisateur" name="nomUtilisateur" required>
@@ -25,5 +17,4 @@
         <div class="wave"></div>
         <div class="wave"></div>
       </div>
-</body>
-</html>
+{%endblock%}
