--- a/templates/inscriptionboites.html
+++ b/templates/inscriptionboites.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Inscription de nouvelles boites</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{%block title%}
+    Inscription d'entreprises
+{%endblock%}
+
+{%block body%}
 	<h1>Inscrire une nouvelle boite</h1>
-</body>
-</html>
+{%endblock%}
